@@ -407,7 +407,7 @@ GSRuntimeInitializeConstants (void)
 
 extern void CFAllocatorInitialize (void);
 extern void CFArrayInitialize (void);
-extern void CFAttributeStringInitialize (void);
+extern void CFAttributedStringInitialize (void);
 extern void CFBagInitialize (void);
 extern void CFBinaryHeapInitialize (void);
 extern void CFBitVectorInitialize (void);
@@ -454,7 +454,7 @@ void CFInitialize (void)
   
   CFAllocatorInitialize ();
   CFArrayInitialize ();
-  CFAttributeStringInitialize ();
+  CFAttributedStringInitialize ();
   CFBagInitialize ();
   CFBinaryHeapInitialize ();
   CFBitVectorInitialize ();
